--- a/auth/src/main/res/values/config.xml
+++ b/auth/src/main/res/values/config.xml
@@ -30,6 +30,8 @@
     https://developers.facebook.com/docs/facebook-login/permissions
     -->
     <string-array name="facebook_permissions">
+        <item>email</item>
+        <item>public_profile</item>
     </string-array>
 
     <!--
